# bitshares1-core

./: .gitignore  .gitmodules  .travis.yml  BUILD_OSX.md  BUILD_UBUNTU.md  BUILD_WIN32.md  CMakeLists.txt  CMakeLists.txt.orig  CODING_STANDARDS.md  LICENSE.md  README.md  build_sharedrop.py  delkeys.txt  dev-test-keys.txt  new_testnet.py  run_cmake.bat  run_cmake_x64.bat  run_vs.bat  run_vs_x64.bat  setenv.bat  setenv.sh  setenv_x64.bat
libraries/: CMakeLists.txt
libraries/api/: CMakeLists.txt  ballot_box_api.json  bingo.json  bitcoin_api.json  blockchain_api.json  btc_api.json  bts_api_generator.cpp  conversion_functions.cpp  debug_api.json  delegate_api.json  dns_api.json  general_api.json  global_api_logger.cpp  light_api.json  mail_api.json  network_api.json  registrar_api.json  types.json  verifier_api.json  wallet_api.json
libraries/bitcoin/: CMakeLists.txt  armory.cpp  armory_wallet.cpp  bitcoin.cpp  bitcoin_stub.cpp  bitcoin_wallet.cpp  electrum.cpp  electrum_wallet.cpp  import_bitcoin_wallet.cpp  import_electrum_wallet.cpp  import_multibit_wallet.cpp  multibit.cpp  multibit_wallet.cpp
libraries/bitcoin_import/: CMakeLists.txt  armory_wallet.cpp  electrum_wallet.cpp  import_bitcoin_wallet_stub.cpp
libraries/blockchain/: CMakeLists.txt  account.cpp  account_operations.cpp  account_operations_v1.cpp  account_record.cpp  address.cpp  asset.cpp  asset_operations.cpp  asset_record.cpp  auction_operations.cpp  balance_operations.cpp  balance_operations_v1.cpp  balance_operations_v2.cpp  balance_operations_v3.cpp  balance_record.cpp  binary_genesis.epilogue  binary_genesis.prologue  block.cpp  block_miner.cpp  blockchain.dox  burn_record.cpp  chain_database.cpp  chain_database_impl.hpp  chain_database_v1.cpp  chain_database_v2.cpp  chain_interface.cpp  chain_interface_v1.cpp  chain_interface_v2.cpp  data_operations.cpp  delegate_record.cpp  delegate_slate.cpp  difficulty.cpp  dns_operations.cpp  dns_utils.cpp  dpos.dox  edge_operations.cpp  edge_record.cpp  extended_address.cpp  feed_operations.cpp  feed_operations_v1.cpp  (+52 more)
libraries/btsx/: CMakeLists.txt  btsx_db.cpp  btsx_transaction_validator.cpp  outputs.cpp  wallet.cpp
libraries/cli/: CMakeLists.txt  cli.cpp  cli.cpp.orig  pretty.cpp  print_result.cpp
libraries/client/: CMakeLists.txt  api_logger.cpp  ballot_box_api.cpp  bingo_api.cpp  blockchain_api.cpp  btc_api.cpp  btc_api_.cpp  client.cpp  debug_api.cpp  delegate_api.cpp  general_api.cpp  light_api.cpp  mail_api.cpp  messages.cpp  network_api.cpp  notifier.cpp  registrar_api.cpp  verifier_api.cpp  wallet_api.cpp
libraries/db/: CMakeLists.txt  index.cpp  object_database.cpp  undo_database.cpp  upgrade_leveldb.cpp
libraries/deterministic_openssl_rand/: CMakeLists.txt  deterministic_openssl_rand.cpp
libraries/dns/: CMakeLists.txt  dns_cli.cpp  dns_db.cpp  dns_outputs.cpp  dns_rpc.cpp  dns_rpc_server.cpp  dns_server.cpp  dns_transaction_validator.cpp  dns_util.cpp  dns_wallet.cpp  outputs.cpp  util.cpp
libraries/keyhotee/: CMakeLists.txt  import_keyhotee_id.cpp
libraries/kid/: CMakeLists.txt  kid_server.cpp
libraries/light_wallet/: CMakeLists.txt  light_wallet.cpp
libraries/lotto/: lotto_db.cpp  lotto_transaction_validator.cpp
libraries/mail/: CMakeLists.txt  client.cpp  design.txt  message.cpp  server.cpp
libraries/net/: CMakeLists.txt  chain_client.cpp  chain_connection.cpp  chain_downloader.cpp  chain_server.cpp  core_messages.cpp  message_oriented_connection.cpp  network.dox  node.cpp  p2p_design_notes.h  peer_connection.cpp  peer_connection.hpp  peer_database.cpp  stcp_socket.cpp  upnp.cpp
libraries/network/: CMakeLists.txt  node.cpp  peer_connection.cpp
libraries/rpc/: CMakeLists.txt  rpc_client.cpp  rpc_server.cpp  rpc_server.cpp.orig
libraries/utilities/: CMakeLists.txt  deterministic_openssl_rand.cpp  git_revision.cpp.in  key_conversion.cpp  string_escape.cpp  words.cpp
libraries/vm/: CMakeLists.txt  engine.cpp
libraries/vote/: CMakeLists.txt  ballot.cpp  ballot_box.cpp  identity_verifier.cpp  messages.cpp  types.cpp
libraries/wallet/: CMakeLists.txt  bitcoin.cpp  extended_address.cpp  light_wallet.cpp  login.cpp  mail.cpp  transaction_builder.cpp  transaction_ledger.cpp  transaction_ledger_experimental.cpp  wallet.cpp  wallet.dox  wallet_db.cpp  wallet_records.cpp  words.cpp
programs/: CMakeLists.txt  feed.py
programs/bts_xt/: CMakeLists.txt  chain_connection.cpp  chain_connection.hpp  chain_messages.hpp  chain_server.cpp  chain_server.hpp  main.cpp  manual_testing.dox  server.cpp
programs/client/: CMakeLists.txt  chain_connection.cpp  genesis.json  htdocs  main.cpp
programs/dns/: CMakeLists.txt  genesis.json  genesis_key.txt  main.cpp  record.json  server.cpp  trustee_key.txt
programs/faucet/: faucet.hpp
programs/kids/: CMakeLists.txt  main.cpp
programs/light_wallet/: Account.cpp  Account.hpp  CMakeLists.txt  LightWallet.cbp  LightWallet.cpp  LightWallet.hpp  LightWallet_automoc.cpp  QtConversions.hpp  QtWrappers.cpp  QtWrappers.hpp  README.md  RoboHash.cpp  RoboHash.hpp  main.cpp  moc_Account.cpp  moc_LightWallet.cpp  moc_QtWrappers.cpp  packdmg.sh  qml.qrc  res.qrc
programs/market_maker/: arbitrage.py  btsx.py  buyUSD.py  config.json  config.py  default_config.json  main.py  market_maker.py  market_sim.py  mylog.py  prices.py  test_btsx_market.py
programs/utils/: CMakeLists.txt  bitcoin_recovery.cpp  bts_convert_addresses.cpp  bts_create_key.cpp  (+14 more)
tests/: CMakeLists.txt  TODO.txt  api_testing_status.txt  bitshares_client_tests.cpp  blockchain_tests.cpp  bts_xt_client_tests.cpp  btstest.py  chain_database_tests.cpp  chain_tests.cpp  client0.bat  client1.bat  client2.bat  client_node.cpp  deterministic_openssl_rand.cpp  deterministic_openssl_rand.hpp  deterministic_signature_test.cpp  dev_fixture.hpp  dev_tests.cpp  dns_tests.cpp  genesis.json  genesis2.json  kid_tests.cpp  nathan_tests.cpp  no_tests.txt  run_regression_tests.bat  run_regression_tests.py  run_regression_tests.sh  server_node.cpp  simple_net_test_client.cpp  test_genesis.json  test_genesis.json.keypairs  things_to_test.txt  wallet_tests.cpp
(+657 files in other folders)
