add_subdirectory( fc )
add_subdirectory( db )
add_subdirectory( api )
add_subdirectory( utilities )
add_subdirectory( blockchain )
add_subdirectory( wallet )
add_subdirectory( net )
add_subdirectory( client )
add_subdirectory( rpc )
add_subdirectory( cli )
add_subdirectory( keyhotee )
#add_subdirectory( kid )
add_subdirectory( bitcoin )
#add_subdirectory( btsx )
#add_subdirectory( dns )
