add_subdirectory( fc )
add_subdirectory( db )
add_subdirectory( utilities )
add_subdirectory( blockchain )
add_subdirectory( bitcoin )
add_subdirectory( keyhotee )
add_subdirectory( mail )
add_subdirectory( wallet )
add_subdirectory( net )
#add_subdirectory( network )
add_subdirectory( api )
add_subdirectory( client )
add_subdirectory( rpc )
add_subdirectory( cli )
